--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -37,7 +37,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <!-- Input label -->
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
                 <!-- Input box -->
                 <RowDefinition Height="Auto"/>
                 <!-- Buttons -->
@@ -48,8 +48,8 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Text="Input (plain text or Base64):" Margin="0,0,0,6"/>
-            <TextBox Grid.Row="1" x:Name="InputBox" Height="100"
-                     AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap"/>
+            <TextBox Grid.Row="1" x:Name="InputBox" MinHeight="80"
+                     AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 
             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,10">
                 <Button Content="Encode →" Width="120" Margin="5" Click="Encode_Click" />
@@ -59,9 +59,9 @@
             </StackPanel>
 
             <TextBlock Grid.Row="3" Text="Result:" Margin="0,10,0,6"/>
-            <TextBox Grid.Row="4" x:Name="ResultBox" Height="120"
+            <TextBox Grid.Row="4" x:Name="ResultBox" MinHeight="120"
                      AcceptsReturn="True" VerticalScrollBarVisibility="Auto"
-                     TextWrapping="Wrap" IsReadOnly="True"/>
+                     TextWrapping="Wrap" IsReadOnly="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </Grid>
     </DockPanel>
 </Window>
