--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,12 @@
 ﻿<Application x:Class="Beb64.GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Beb64.GUI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Beb64.GUI">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/Light.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
