--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="BeB64GUI.MainWindow"
+﻿<Window x:Class="Beb64.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BeB64 - Base64 Encoder / Decoder" 
-        Height="400" Width="500" MinHeight="350" MinWidth="450"
+        Title="BeB64 - v1.0.0" 
+        Height="400" Width="500" MinHeight="600" MinWidth="600"
         Background="{DynamicResource WindowBackgroundBrush}"
         Foreground="{DynamicResource WindowForegroundBrush}">
 
