feature: added about window dialog that shows publisher, date, github repo links, and diagnostics.

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -47,6 +47,9 @@
                               Command="{Binding SetDarkThemeCommand}" />
                 </MenuItem>
             </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem Header="_About" Click="About_Click"/>
+            </MenuItem>
         </Menu>
 
         <!-- Status bar -->
