--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:vm="clr-namespace:Beb64.GUI.ViewModels"
+        xmlns:helpers="clr-namespace:Beb64.GUI.Helpers"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         Title="BeB64 - v1.0.0"
@@ -89,11 +90,12 @@
                        Text="Input (plain text or Base64):"
                        Margin="0,0,0,6"/>
 
+            <!-- Input TextBox (with watermark, matches output box) -->
             <TextBox x:Name="InputTextBox"
                      Grid.Row="1"
                      Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"
                      TextChanged="InputTextBox_TextChanged"
-                     MinHeight="80"
+                     MinHeight="120"
                      AcceptsReturn="True"
                      VerticalScrollBarVisibility="Auto"
                      TextWrapping="Wrap"
@@ -102,21 +104,10 @@
                      PreviewDrop="InputTextBox_PreviewDrop"
                      PreviewDragEnter="InputTextBox_PreviewDragEnter"
                      PreviewDragLeave="InputTextBox_PreviewDragLeave"
+                     helpers:WatermarkHelper.Watermark="Enter text here or drag/drop a file..."
+
                      Background="{DynamicResource ControlBackgroundBrush}"
-                     Foreground="{DynamicResource WindowForegroundBrush}">
-                <TextBox.Style>
-                    <Style TargetType="TextBox">
-                        <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
-                        <Setter Property="BorderThickness" Value="1" />
-                        <Style.Triggers>
-                            <Trigger Property="Tag" Value="DropReady">
-                                <Setter Property="BorderBrush" Value="{DynamicResource AccentBrush}" />
-                                <Setter Property="BorderThickness" Value="2" />
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBox.Style>
-            </TextBox>
+                     Foreground="{DynamicResource WindowForegroundBrush}" />
 
             <StackPanel Grid.Row="2"
                         Orientation="Horizontal"
@@ -133,6 +124,7 @@
                        Text="Result:"
                        Margin="0,10,0,6"/>
 
+            <!-- Output TextBox -->
             <TextBox Grid.Row="4"
                      Text="{Binding ResultText}"
                      MinHeight="120"
