--- a/Views/AboutWindow.xaml
+++ b/Views/AboutWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:Beb64.GUI.ViewModels"
         Title="About BeB64"
-        Height="360" Width="520"
+        Height="450" Width="520"
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize"
         Background="{DynamicResource WindowBackgroundBrush}"
@@ -32,14 +32,12 @@
         <!-- Header -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,12">
             <Border Width="42" Height="42" CornerRadius="6"
-                    Background="{DynamicResource AccentBrush}"
+                    Background="Transparent"
                     Margin="0,0,12,0">
-                <TextBlock Text="B64"
-                           Foreground="White"
-                           FontWeight="Bold"
-                           FontSize="16"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"/>
+                <Image Source="pack://application:,,,/assets/beb64.png"
+                       Width="32" Height="32"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"/>
             </Border>
 
             <StackPanel>
@@ -74,6 +72,11 @@
                 <Run Text="Issues: " />
                 <Hyperlink Command="{Binding OpenUrlCommand}" CommandParameter="{Binding IssuesUrl}">
                     <Run Text="{Binding IssuesUrl}" />
+                </Hyperlink>
+                <LineBreak/>
+                <Run Text="Learn more about Base64: " />
+                <Hyperlink Command="{Binding OpenUrlCommand}" CommandParameter="{Binding Base64InfoUrl}">
+                    <Run Text="{Binding Base64InfoUrl}" />
                 </Hyperlink>
             </TextBlock>
 
